[package]
name = "hmg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level=3
codegen-units=1

[dependencies]

[dev-dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.143"
criterion = {version = "0.5", features = ["html_reports"]}

[[bench]]
name = "benchmark"
harness = false
